fix: Adjust CSS for dashboard and auth pages (#1136)
- Fixes page header margings being too large
- Adjusts CSS for creation / edit pages for better rezisability
- Fix taxonomy tabs alignment, stops tabs from jumping on hover
- Makes buttons in component registry UI look like StudioCMS UI buttons
- Adjusts spacing for tree nodes and leaves
- Fixes the <main> element not resizing properly when using a double
  sidebar
- Fixes the SMTP configuration's mail editor having a set height
- Fixes the canvas incorrectly showing up on mobile devices

--- a/packages/studiocms/frontend/styles/dashboard-base.css
+++ b/packages/studiocms/frontend/styles/dashboard-base.css
@@ -17,7 +17,7 @@ body {
 
 main {
 	min-height: 100%;
-	width: 100%;
+	width: 100vw;
 	max-width: 100vw;
 	position: relative;
 }
